# tvpaint-avalon

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
plugins/: .ycm_extra_conf.py  CMakeLists.txt
plugins/include/: avalon_client.h  avalon_server.h  avalon_vars.h  debug.h  tvp_avalon-server.h
plugins/lib/: tokenizer.cpp  tvp_avalon_client.c  tvp_avalon_server.c
plugins/tvp_avalon-create/: CMakeLists.txt  tvp_avalon_create.c
plugins/tvp_avalon-loader/: CMakeLists.txt  tvp_avalon_loader.c
plugins/tvp_avalon-publish/: CMakeLists.txt  tvp_avalon_publish.c
plugins/tvp_avalon-server/: CMakeLists.txt  tvp_avalon-server_plugin.c
plugins/tvp_avalon-startstop/: CMakeLists.txt  tvp_avalon-startstop_plugin.c
plugins/tvp_avalon-workfiles/: CMakeLists.txt  tvp_avalon_workfiles.c
pytvpaint_avalon/: functions.py  launch.py
